RESOLVED FIXED 98292
IndexedDB: Memory leak when deleting object stores with indexes
https://bugs.webkit.org/show_bug.cgi?id=98292
Summary IndexedDB: Memory leak when deleting object stores with indexes
Joshua Bell
Reported 2012-10-03 13:16:16 PDT
IndexedDB: Memory leak when deleting object stores with indexes
Attachments
Patch (3.00 KB, patch)
2012-10-03 13:19 PDT, Joshua Bell
no flags
Joshua Bell
Comment 1 2012-10-03 13:19:05 PDT
Joshua Bell
Comment 2 2012-10-03 13:19:54 PDT
Found via http://code.google.com/p/chromium/issues/detail?id=122249 alecflett@ - can you take a quick look?
Alec Flett
Comment 3 2012-10-03 13:35:54 PDT
Comment on attachment 166948 [details] Patch LGTM
Joshua Bell
Comment 4 2012-10-03 13:56:13 PDT
tony@ - r?
WebKit Review Bot
Comment 5 2012-10-03 15:41:49 PDT
Comment on attachment 166948 [details] Patch Clearing flags on attachment: 166948 Committed r130335: <http://trac.webkit.org/changeset/130335>
WebKit Review Bot
Comment 6 2012-10-03 15:41:52 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.